watcher.css
/*How to align information to left, right, & center*/
.watcher-center{text-align:center!important}
.watcher-left-align{text-align:left!important}
.watcher-right-align{text-align:right!important}

/*Changing the font/font family*/
@font-face{font-family: 'RustyHooks'; src: url(fonts/RustyHooksRegular-nROER.ttf)}
@font-face{font-family: "SunnySpells"; src: url(fonts/SunnyspellsRegular-MV9ze.otf)}
html{overflow-x:hidden}
h1{font-size:36px}
h2{font-size:30px}
h3{font-size:24px}
h4{font-size:20px}
h5{font-size:18px}
h6{font-size:16px}
h1,h2,h3,h4,h5,h6{font-family: RustyHooks; font-weight:400; margin:10px 0}
h7{font-family: SunnySpells; font-size: 30px;}
h8{font-family: Lucida Sans; font-size: 12px;}
RHCustom{font-family: RustyHooks; font-size:14px;}
SSCustom{font-family: SunnySpells; font-size: 14px;}

/*Padding*/
.watcher-padding-12{padding-top:6px!important;padding-bottom:6px!important}

/*Special blue/purple gradient*/
.watcher-gradient{ background: rgb(111,22,255);
    background: linear-gradient(90deg, rgba(111,22,255,0.9417892156862745) 35%, rgba(173,0,252,1) 100%);}

/*Text Colors*/
.watcher-text-black,.watcher-hover-text-black:hover{color:#000!important}
.watcher-text-white,.watcher-hover-text-white:hover{color:#fff!important}

/*Header Bar*/
header{
    background: #52307c;
}
header::after{
    content:'';
    display: table;
    clear: both;
}
nav{
    float: right;
}
nav ul{
    margin: 0;
    padding: 0;
    list-style: none;
}
nav li{
    display: inline-block;
    margin-left: 70px;
    padding-top: 22px;

    position: relative; /*For fancy hover*/
}
nav a{
    color:#fff;
    text-decoration: none;
    text-transform: uppercase;
    font-size: 16px;
}
nav a:hover{
    color:#DFC5FE;
}
nav a::before{
    content: '';
    display: block;
    height: 5px;
    background-color: #fff;

    position: absolute;
    top: 0;
    width: 0%;
    transition: all ease-in-out 250ms;
}
nav a:hover::before{
    width: 100%;
}
.logo{
    float: left;
    padding: 10px 0;
    height: 60px;
    width: 60px;
}

/*Container*/
.watcher-container{width:80%; margin:0 auto}

/*Profile Photo*/
.profilePhoto{
    width: 800px;
    height: auto;
}

/*Making two columns side-by-side -- From W3 Schools*/
.watcher-column {
    float: left;
    width: 50%;
}

  /* Clear floats after the columns */
  .watcher-row:after {
    content: "";
    display: table;
    clear: both;
  }

  /*Getting bullet points to be by the text*/
  ul {
    text-align: center;
    list-style-position: inside;
}

/*Body & Footer Info*/
body{
    background: rgb(111,22,255); 
    background: linear-gradient(90deg, rgba(111,22,255,0.9417892156862745) 35%, rgba(173,0,252,1) 100%);
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    color: #fff;
    font-family: Lucida Sans; 
    font-size:14px; 
    line-height:1.5;
}
footer{
    margin-top: auto;
}

/*Accordion*/
#accordion{
    margin: 100px auto;
    width: 1000px;
    text-align: left;
}
#accordion li{
    list-style: none;
    width: 100%;
    margin-bottom: 10px;
    background: #52307c;
    padding: 10px;
    border-radius: 4 px;
}
#accordion li label{
    padding: 10px;
    display: flex;
    align-items: center;
    justify-content: space-between;
    font-size: 18px;
    font-weight: 500;
    cursor: pointer;
    color:#fff;
    font-family: RustyHooks;
}
#accordion li label span{
    transform: rotate(90deg);
    font-size: 22px;
    color: #3a9bdc;
}
#accordion label + input[type="radio"]{
    display: none;
}
#accordion .content{
    padding: 0 10px;
    line-height: 26px;
    max-height: 0;
    overflow: hidden;
    transition: max-height 0.5s;
}
#accordion label + input[type="radio"]:checked + .content{
    max-height: 400px;
}
/*Changing Link Color within Accordion*/
#accordion .content a{
    color: #c264ff;
    background-color: transparent;
    text-decoration: none;
}

/*Contact Form*/
form { max-width:420px; 
    margin:50px auto; 
}

.feedback-input {
  color:white;
  font-family: 'Lucida Sans';
  font-weight:500;
  font-size: 18px;
  border-radius: 4px;
  line-height: 22px;
  background-color: transparent;
  border:2px solid #3a9bdc;
  transition: all 0.3s;
  padding: 14px;
  margin-bottom: 15px;
  width:100%;
  box-sizing: border-box;
  outline:0;background: #52307c;
}

.feedback-input:focus { border:2px solid #3a9bdc; }

textarea {
  height: 150px;
  line-height: 150%;
  resize:vertical;
}

[type="submit"] {
  font-family: 'Montserrat', Arial, Helvetica, sans-serif;
  width: 100%;
  background:#3a9bdc;
  border-radius:4px;
  border:0;
  cursor:pointer;
  color:white;
  font-size:24px;
  padding-top:10px;
  padding-bottom:10px;
  transition: all 0.3s;
  margin-top:-4px;
  font-weight:700;
}
[type="submit"]:hover { background:#3a9bdc; }

